# metaltest

./: .clang-format  CMakeLists.txt  LICENSE  README.md
application/: CMakeLists.txt
application/include/: app_launch.h  sprite4cpp.h
application/src/: app_delegate.h  app_delegate.mm  renderer.h  renderer.mm
functions/: CMakeLists.txt
functions/include/: camera.h  draw2d.h  draw3d.h  font_render.h  game_pad.h  keyboard.h  sprite.h  texture.h
functions/src/: camera.cpp  draw2d.mm  draw3d.mm  dsemaphore.h  font_render.mm  game_pad.mm  keyboard.mm  sprite.mm  texture.mm
resources/: metaltest.icns
shaders/: CMakeLists.txt  prim2d.metal  prim3d.metal  shader_def.h  simple2d.metal  simple3d.metal
src/: main.cpp
